pintos/src/userprog/errores.txt
ar *empty = espacio;
                 ^
../../userprog/process.c:42:3: warning: passing argument 1 of 'strtok_r' discards 'const' qualifier from pointer target type [enabled by default]
   exec_name = strtok_r(file_name,espacio,&save_ptr);
   ^
In file included from ../../userprog/process.c:8:0:
../../lib/string.h:25:7: note: expected 'char *' but argument is of type 'const char *'
 char *strtok_r (char *, const char *, char **);
       ^
../../userprog/process.c:42:3: warning: passing argument 2 of 'strtok_r' makes pointer from integer without a cast [enabled by default]
   exec_name = strtok_r(file_name,espacio,&save_ptr);
   ^
In file included from ../../userprog/process.c:8:0:
../../lib/string.h:25:7: note: expected 'const char *' but argument is of type 'char'
 char *strtok_r (char *, const char *, char **);
       ^
../../userprog/process.c:41:9: warning: unused variable 'empty' [-Wunused-variable]
   char *empty = espacio;
         ^
../../userprog/process.c: In function 'load':
../../userprog/process.c:320:3: warning: passing argument 2 of 'setup_stack' discards 'const' qualifier from pointer target type [enabled by default]
   if (!setup_stack (esp, file_name))
   ^
../../userprog/process.c:213:13: note: expected 'char *' but argument is of type 'const char *'
 static bool setup_stack (void **esp, char *file_name);
             ^
../../userprog/process.c: In function 'setup_stack':
../../userprog/process.c:458:3: error: expected ';', identifier or '(' before 'char'
   char espacio = ' ';
   ^
../../userprog/process.c:459:17: warning: initialization makes pointer from integer without a cast [enabled by default]
   char *empty = espacio;
                 ^
../../userprog/process.c:461:7: error: 'token' undeclared (first use in this function)
   for(token = strtok_r(file_name,espacio, &save_ptr); token!= NULL; token=strtok_r(NULL," ", &save_ptr)){
       ^
../../userprog/process.c:461:7: note: each undeclared identifier is reported only once for each function it appears in
../../userprog/process.c:461:44: error: 'save_ptr' undeclared (first use in this function)
   for(token = strtok_r(file_name,espacio, &save_ptr); token!= NULL; token=strtok_r(NULL," ", &save_ptr)){
                                            ^
../../userprog/process.c:461:3: warning: passing argument 2 of 'strtok_r' makes pointer from integer without a cast [enabled by default]
   for(token = strtok_r(file_name,espacio, &save_ptr); token!= NULL; token=strtok_r(NULL," ", &save_ptr)){
   ^
In file included from ../../userprog/process.c:8:0:
../../lib/string.h:25:7: note: expected 'const char *' but argument is of type 'char'
 char *strtok_r (char *, const char *, char **);
       ^
../../userprog/process.c:462:9: warning: implicit declaration of function 'malloc' [-Wimplicit-function-declaration]
  struct node* excOrArg = malloc(sizeof(struct node));
         ^
../../userprog/process.c:462:26: warning: incompatible implicit declaration of built-in function 'malloc' [enabled by default]
  struct node* excOrArg = malloc(sizeof(struct node));
                          ^
In file included from ../../lib/kernel/list.h:86:0,
                 from ../../threads/thread.h:5,
                 from ../../userprog/process.h:4,
                 from ../../userprog/process.c:1:
../../lib/stddef.h:5:55: error: 'struct node' has no member named 'list_elem'
 #define offsetof(TYPE, MEMBER) ((size_t) &((TYPE *) 0)->MEMBER)
                                                       ^
../../lib/kernel/list.h:110:24: note: in expansion of macro 'offsetof'
                      - offsetof (STRUCT, MEMBER.next)))
                        ^
../../userprog/process.c:492:22: note: in expansion of macro 'list_entry'
  struct node* Node = list_entry(iter, struct node, list_elem); 
                      ^
../../userprog/process.c:513:10: error: redefinition of 'aux'
   size_t aux = 0;
          ^
../../userprog/process.c:500:10: note: previous definition of 'aux' was here
   size_t aux = count;
          ^
../../userprog/process.c:516:21: error: redefinition of 'iter'
   struct list_elem* iter = list_begin(&execAndArguments);
                     ^
../../userprog/process.c:485:21: note: previous definition of 'iter' was here
   struct list_elem* iter = list_begin(&execAndArguments);
                     ^
In file included from ../../lib/kernel/list.h:86:0,
                 from ../../threads/thread.h:5,
                 from ../../userprog/process.h:4,
                 from ../../userprog/process.c:1:
../../lib/stddef.h:5:55: error: 'struct node' has no member named 'list_elem'
 #define offsetof(TYPE, MEMBER) ((size_t) &((TYPE *) 0)->MEMBER)
                                                       ^
../../lib/kernel/list.h:110:24: note: in expansion of macro 'offsetof'
                      - offsetof (STRUCT, MEMBER.next)))
                        ^
../../userprog/process.c:518:22: note: in expansion of macro 'list_entry'
  struct node* Node = list_entry(iter, struct node, list_elem); 
                      ^
../../userprog/process.c:519:19: error: expected expression before 'char'
   *esp -= sizeof(*char);
                   ^
../../userprog/process.c:521:40: error: expected expression before 'char'
  memcpy(*esp, PHYS_BASE - aux, sizeof(*char)); 
                                        ^
../../userprog/process.c:526:19: error: expected expression before 'char'
   *esp -= sizeof(*char);
                   ^
../../userprog/process.c:527:31: error: expected expression before 'char'
   memcpy(*esp, *esp + sizeof(*char), sizeof(*char));
                               ^
../../userprog/process.c:527:46: error: expected expression before 'char'
   memcpy(*esp, *esp + sizeof(*char), sizeof(*char));
                                              ^
../../userprog/process.c:459:9: warning: unused variable 'empty' [-Wunused-variable]
   char *empty = espacio;
         ^
make[1]: *** [userprog/process.o] Error 1
make[1]: Leaving directory `/app/PintOS-2020-1/pintos/src/userprog/build'
make: *** [all] Error 2

